@@ -1,0 +1,2 @@
+Golang binaries from upstream, or built by pkgsrc developers
+for targets where no upstream distribution is available.
