@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2020,v 1.2710 2020/05/02 18:09:06 tsutsui Exp $
+$NetBSD: CHANGES-2020,v 1.2711 2020/05/02 20:07:31 tnn Exp $
 
 Changes to the packages collection and infrastructure in 2020:
 
@@ -3996,3 +3996,4 @@ Changes to the packages collection and infrastructure in 2020:
 	Updated x11/ruby-gtksourceview2 to 3.4.2 [tsutsui 2020-05-02]
 	Updated x11/ruby-gtksourceview3 to 3.4.2 [tsutsui 2020-05-02]
 	Updated x11/ruby-vte to 3.4.2 [tsutsui 2020-05-02]
+	Added lang/go-bin version 1.14.2 [tnn 2020-05-02]
